     Instead of something like "{{((}}#if:$2{{!}}$2{{!}}$1{{))}}", "{{#if:$2|$2|$1}}" can be used.
   - '#regex' with 'e' flag now first escapes matches before putting them into the back-references
     and expanding them. Therefore a new configuration variable '$egRegexFunExpansionEscapeTemplates'
     has been introduced which serves as a workaround for MW bug #32829.
 
 * December 5, 2011 -- Version 1.0.2
   - Limit won't exceed early when 'e' flag with many backrefs in replacement is used extensivelly.
   - It's possible to use the 'Regex Fun' regex system with advanced flags within other extensions.
   - Performance increased for executing huge numbers of the same regex on different strings.
   - Internal representative functions for parser functions now have a 'pf_' prefix.

 * November 6, 2011 -- Version 1.0.1
   - Bug in '#regex_var' solved: default value now gets returned in case '#regex' went wrong or
     not called before.
   - '#regexall' last parameter, 'length', can be empty '' which is the specified default now. It
     simply means there is no limit and all items should be returned ('-1' has another meaning).
   - Introduces two global configuration variables:
     + '$egRegexFunDisabledFunctions' - to disable certain functions within the wiki.
     + '$egRegexFunMaxRegexPerParse'  - limit for number of function calls per parser process.
   - Some minor cleanup done.

 * November 4, 2011 -- Version 1.0 (initial public release).
   Introduces the following parser functions defined within 'ExtRegexFun' class:
   - #regex
   - #regexall
   - #regex_var
   - #regexquote
   
   Main features:
   - Searching within strings, using regular expression.
   - Replacing within strings, using regular expression.
   - Allows save use of user input within expressions by running '#regexquote' parser function
     over it. An important function other regex extensions still lack.